welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: reassignment to val
		(c = c + 1);
                   ^ColumnByColumn:21: error: reassignment to val
		(l = l + 1);
                   ^ColumnByColumn:32: error: not enough arguments for method possuivante: (l: Int, c: Int)Unit.
Unspecified value parameters l, c.
		possuivante();
                           ^